# ChangeLog for dev-ruby/rspec
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.153 2013/08/11 07:50:47 graaff Exp $

  11 Aug 2013; Hans de Graaff <graaff@gentoo.org> -rspec-1.3.1-r1.ebuild:
  Cleanup.

  03 Aug 2013; Agostino Sarubbo <ago@gentoo.org> rspec-1.3.2.ebuild:
  Stable for sparc, wrt bug #472910

*rspec-2.14.1 (20 Jul 2013)

  20 Jul 2013; Hans de Graaff <graaff@gentoo.org> +rspec-2.14.1.ebuild:
  Version bump.

  20 Jul 2013; Hans de Graaff <graaff@gentoo.org> -rspec-2.6.0-r1.ebuild:
  Cleanup.

  16 Jul 2013; Hans de Graaff <graaff@gentoo.org> rspec-1.3.2.ebuild:
  Remove unneeded dependency on git, fixing bug 476820.

  14 Jul 2013; Agostino Sarubbo <ago@gentoo.org> rspec-1.3.2.ebuild:
  Stable for alpha, wrt bug #472910

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> rspec-1.3.2.ebuild:
  Stable for ppc64, wrt bug #472910

  13 Jul 2013; Agostino Sarubbo <ago@gentoo.org> rspec-1.3.2.ebuild:
  Stable for ppc, wrt bug #472910

  07 Jul 2013; Agostino Sarubbo <ago@gentoo.org> rspec-1.3.2.ebuild:
  Stable for ia64, wrt bug #472910

  06 Jul 2013; Agostino Sarubbo <ago@gentoo.org> rspec-1.3.2.ebuild:
  Stable for amd64, wrt bug #472910

  06 Jul 2013; Agostino Sarubbo <ago@gentoo.org> rspec-1.3.2.ebuild:
  Stable for x86, wrt bug #472910

  10 Jun 2013; Jeroen Roovers <jer@gentoo.org> rspec-1.3.2.ebuild:
  Stable for HPPA (bug #472910).

*rspec-2.13.0 (24 Feb 2013)

  24 Feb 2013; Hans de Graaff <graaff@gentoo.org> +rspec-2.13.0.ebuild:
  Version bump.

  24 Feb 2013; Hans de Graaff <graaff@gentoo.org> -rspec-2.10.0.ebuild,
  -rspec-2.11.0.ebuild:
  Cleanup.

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> rspec-2.12.0.ebuild:
  Stable for sparc, wrt bug #450532

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> rspec-2.12.0.ebuild:
  Stable for ia64, wrt bug #450532

  21 Jan 2013; Agostino Sarubbo <ago@gentoo.org> rspec-2.12.0.ebuild: