@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/rspec-1.3.2.ebuild,v 1.14 2013/08/03 07:40:04 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/rspec-1.3.2.ebuild,v 1.15 2013/09/22 17:55:03 graaff Exp $
 
 EAPI=2
 USE_RUBY="ruby18 ruby19 jruby"
@@ -44,10 +44,6 @@ USE_RUBY="ruby18 ree18 ruby19" \
 		>=dev-ruby/fakefs-0.2.1 )"
 USE_RUBY="ruby19" ruby_add_bdepend "test? ( =dev-ruby/test-unit-1.2.3 )"
 
-# the testsuite skips over heckle for Ruby 1.9 so we only request it for 1.8
-USE_RUBY="ruby18 ree18" \
-	ruby_add_bdepend "test? ( >=dev-ruby/heckle-1.4.3 )"
-
 all_ruby_prepare() {
 	# Avoid dependency on git.
 	sed -i -e '/git ls-files/d' ${RUBY_FAKEGEM_GEMSPEC} || die
@@ -64,6 +60,10 @@ all_ruby_prepare() {
 	# Support ruby 1.9.3
 	cp spec/spec/runner/formatter/html_formatted-1.9.2.html spec/spec/runner/formatter/html_formatted-1.9.3.html || die
 	cp spec/spec/runner/formatter/text_mate_formatted-1.9.2.html spec/spec/runner/formatter/text_mate_formatted-1.9.3.html || die
+
+	# Drop heckle dependency.
+	rm spec/spec/runner/heckler_spec.rb spec/spec/runner/heckle_runner_spec.rb || die
+	sed -i -e '381,398 s:^:#:' spec/spec/runner/option_parser_spec.rb || die
 }
 
 src_test() {
