@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby18? ( >=dev-ruby/diff-lcs-1.1.2[ruby_targets_ruby18] ) ruby_targets_ruby19? ( >=dev-ruby/diff-lcs-1.1.2[ruby_targets_ruby19] ) ruby_targets_jruby? ( >=dev-ruby/diff-lcs-1.1.2[ruby_targets_jruby] ) ) ruby_targets_ruby18? ( test? ( >=dev-ruby/hoe-2.0.0[ruby_targets_ruby18] dev-ruby/zentest[ruby_targets_ruby18] >=dev-ruby/syntax-1.0[ruby_targets_ruby18] >=dev-ruby/fakefs-0.2.1[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( >=dev-ruby/hoe-2.0.0[ruby_targets_ree18] dev-ruby/zentest[ruby_targets_ree18] >=dev-ruby/syntax-1.0[ruby_targets_ree18] >=dev-ruby/fakefs-0.2.1[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/hoe-2.0.0[ruby_targets_ruby19] dev-ruby/zentest[ruby_targets_ruby19] >=dev-ruby/syntax-1.0[ruby_targets_ruby19] >=dev-ruby/fakefs-0.2.1[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( test? ( =dev-ruby/test-unit-1.2.3[ruby_targets_ruby19] ) ) ruby_targets_ruby18? ( test? ( >=dev-ruby/heckle-1.4.3[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( >=dev-ruby/heckle-1.4.3[ruby_targets_ree18] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby18? ( test? ( dev-ruby/rake[ruby_targets_ruby18] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_jruby? ( test? ( dev-ruby/rake[ruby_targets_jruby] ) ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) )
+DEPEND=test? ( ruby_targets_ruby18? ( >=dev-ruby/diff-lcs-1.1.2[ruby_targets_ruby18] ) ruby_targets_ruby19? ( >=dev-ruby/diff-lcs-1.1.2[ruby_targets_ruby19] ) ruby_targets_jruby? ( >=dev-ruby/diff-lcs-1.1.2[ruby_targets_jruby] ) ) ruby_targets_ruby18? ( test? ( >=dev-ruby/hoe-2.0.0[ruby_targets_ruby18] dev-ruby/zentest[ruby_targets_ruby18] >=dev-ruby/syntax-1.0[ruby_targets_ruby18] >=dev-ruby/fakefs-0.2.1[ruby_targets_ruby18] ) ) ruby_targets_ree18? ( test? ( >=dev-ruby/hoe-2.0.0[ruby_targets_ree18] dev-ruby/zentest[ruby_targets_ree18] >=dev-ruby/syntax-1.0[ruby_targets_ree18] >=dev-ruby/fakefs-0.2.1[ruby_targets_ree18] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/hoe-2.0.0[ruby_targets_ruby19] dev-ruby/zentest[ruby_targets_ruby19] >=dev-ruby/syntax-1.0[ruby_targets_ruby19] >=dev-ruby/fakefs-0.2.1[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( test? ( =dev-ruby/test-unit-1.2.3[ruby_targets_ruby19] ) ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_jruby? ( dev-java/jruby ) ruby_targets_ruby18? ( test? ( dev-ruby/rake[ruby_targets_ruby18] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_jruby? ( test? ( dev-ruby/rake[ruby_targets_jruby] ) ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) test? ( ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_jruby? ( virtual/rubygems[ruby_targets_jruby] ) )
 DESCRIPTION=A Behaviour Driven Development (BDD) framework for Ruby
 EAPI=2
 HOMEPAGE=http://rspec.rubyforge.org/
@@ -10,4 +10,4 @@ RDEPEND=!<dev-ruby/rspec-rails-1.3.2 ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) 
 SLOT=0
 SRC_URI=mirror://rubygems/rspec-1.3.2.gem
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	java-utils-2	6032f7ec6471c6459da900e11f0f7bf7	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=19e51ea26e2252186d475de9f12e5aac
+_md5_=026be016f983afdef5ba70785127a60c
