@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rspec
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.153 2013/08/11 07:50:47 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.154 2013/09/22 17:55:03 graaff Exp $
+
+  22 Sep 2013; Hans de Graaff <graaff@gentoo.org> rspec-1.3.2.ebuild:
+  Drop dependency on broken and deprecated heckle.
 
   11 Aug 2013; Hans de Graaff <graaff@gentoo.org> -rspec-1.3.1-r1.ebuild:
   Cleanup.
